fix some z-index bugs

--- a/ST.css
+++ b/ST.css
@@ -53,6 +53,7 @@ h1 {
   opacity: .9;
 }
 p {
+  z-index: 2;
   position: absolute;
   top: 40%;
   right: 10em;
