--- a/TIFU.css
+++ b/TIFU.css
@@ -32,6 +32,7 @@ body {
 }
 
 h1 {
+  z-index:2;
   position: absolute;
   top: 20%;
   right: 1em;
@@ -40,9 +41,9 @@ h1 {
   padding: 0;
   overflow: visible;
   text-align: center;
-  text-shadow: 0px 4px 3px rgba(0,0,0,1),
-              0px 8px 13px rgba(0,0,0,1),
-              0px 18px 23px rgba(0,0,0,.5);
+  text-shadow: 0px 0px 10px rgba(0,0,0,1),
+             0px 0px 23px rgba(0,0,0,.75),
+             0px 2px 33px rgba(0,0,0,.5);
   font-family: Lato, sans-serif;
   font-weight: 300;
   font-size: 4vw;
@@ -52,6 +53,7 @@ h1 {
 }
 
 p {
+  z-index: 2;
   position: absolute;
   top: 40%;
   right: 10em;
